--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                     <li>html</li>
                     <li>css</li>            
                     <li>javascript</li>
+                    <li>bootstrap</li>
                 </uL>
             </div>
                     
