modifique el footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!--footer-->
     <footer class="footer">
         <div class="contenedor">
-            <a class="pFooter animacion" href="index.html"> your next project is here! </a>
+            <a class="pFooter animacion" href="index.html"> your next project is here! jose salazar  </a>
         </div>        
     </footer>
     
