Agrege un skill mas

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                     <li>autodesk autocad</li>
                     <li>autodesk revit</li>
                     <li>interior desing</li>
-                    <li>3d modeling</li>            
+                    <li>3d modeling</li>      
+                    <li>retail desing</li>       
                 </uL>
             </div>          
 
